homework-5/manifests/service-homework-5.yaml
apiVersion: v1
kind: Service
metadata:
  name: students-app
  namespace: homework-5
spec:
  type: ClusterIP
  ports:
    - port: 7777
      targetPort: 8081
  selector:
    app: students-app
