homework-5/manifests/ingress-homework-5.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: students-app
  namespace: homework-5
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: students-app
                port:
                  number: 7777
            pathType: Prefix
            path: /health
